<resources>
    <string name="app_name">Baobab</string>
    <string name="action_settings">Settings</string>
    <string name="no_entries">you may need to reinstall! </string>
    <string name="gender">Gender</string>
    <string name="swap">Swap</string>
    <string name="make_home">Make Home</string>
    <string name="exit">Exit</string>
    <string name="file">File</string>
    <string name="parent_row">This is the row data for parent </string>
    <string name="sample_name">Anusa Barnabas MASAMBO</string>
    <string name="sample_dates">1982</string>
    <string name="spouse_row">row for spouse</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="remarks">Notes</string>
    <string name="spouse">spouse</string>
    <string name="sort_spouse">sort</string>
    <string name="list_spouse">spouses</string>
    <string name="list_kids">families</string>
    <string name="go_home">home</string>
    <string name="load_members">members</string>
    <string name="load_pages">pages</string>
    <string name="do_import">Import</string>
    <string name="do_export">Export</string>
    <string name="do_restore">Restore</string>
    <string name="do_delete">Delete</string>
    <string name="do_fresh">New Data</string>
    <string name="do_backup">Backup</string>
    <string name="member_edit_first">First Name</string>
    <string name="dad_edit_first">Father\'s First Name</string>
    <string name="mom_edit_first">Mother\'s First Name</string>
    <string name="member_edit_last">Last Name</string>
    <string name="dad_edit_last">Father\'s Last Name</string>
    <string name="mom_edit_last">Mother\'s Last Name</string>
    <string name="member_edit_comment">Notes</string>
    <string name="member_edit_yob">Born</string>
    <string name="member_edit_yod">Died</string>
    <string name="member_edit_note">Add a note &#8230;</string>
    <string name="member_edit_old">Notes</string>
    <string name="member_edit_confirm">Save Changes</string>
    <string name="member_more_notes">&#8230; More Notes</string>
    <string name="member_edit_more">Edit Notes</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_notes_edit">Edit</string>
    <string name="title_activity_spouse_edit">Edit Spouses</string>
    <string name="title_activity_pages">File Actions</string>
    <string name="dialog_fire_missiles">dialog_fire_missiles</string>
    <string name="cancel">Cancel</string>
    <string name="fire">fire</string>
    <string name="plus">+</string>
    <string name="plus_color">#06bcf3</string>
    <string name="gender_text">Gender</string>
    <string name="footer_text_default">Add Child</string>
    <string name="footer_text_alt">Add Spouse</string>
    <string name="dialog_add_child">Add Child</string>
    <string name="add">Add New Child</string>
    <string name="pick_edit">Choose Action:</string>
    <string name="app_label">Baobab</string>
    <string name="search_hint">Search by last name</string>
    <string name="title_activity_search_results">Search Tree</string>
    <string name="sort_kids">Order Kids</string>
    <string name="sort_spouses">Order Spouses</string>
    <string name="pick_sort">Choose group to reorder</string>
</resources>
