<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bpc.baobab.MainActivity">
    <item
        android:id="@+id/home"
        android:orderInCategory="20"
        android:icon="@drawable/ic_home_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/go_home"/>
    <item
        android:id="@+id/file"
        android:orderInCategory="25"
        android:icon="@drawable/ic_insert_drive_file_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/file" />
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="10"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_hint" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="40"
        app:showAsAction="never"
        android:title="@string/exit" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
