<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/member_first"
            android:layout_width="match_parent"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"
            android:hint="@string/member_edit_first"
            android:imeOptions="actionNext" >
        </EditText>
        <EditText
            android:id="@+id/member_last"
            android:layout_width="match_parent"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"
            android:hint="@string/member_edit_last"
            android:imeOptions="actionNext" >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/member_yob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/member_edit_yob"
            android:singleLine="true"
            android:imeOptions="actionNext" >
        </EditText>
        <EditText
            android:id="@+id/member_yod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/member_edit_yod"
            android:singleLine="true"
            android:imeOptions="actionNext" >
        </EditText>
    </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/genderBtn"
            android:src="@drawable/female_64"
            android:layout_margin="2dp" />
</LinearLayout>
    <View
        android:id="@+id/separator"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="#807a7a"></View>
    <EditText
        android:id="@+id/member_note"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="top|center_vertical"
        android:hint="@string/member_edit_note">
    </EditText>
    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/dividerVertical"
        style="?android:attr/buttonBarButtonStyle"
        android:measureWithLargestChild="true"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="0dip">
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/member_edit_confirm"
            android:textColor="#ffffff"
            android:background="@color/colorFooter">
        </Button>
    </LinearLayout>

</LinearLayout>